--- a/style.css
+++ b/style.css
@@ -1,8 +1,86 @@
-body {
-    color: aquamarine;
-    font: bolder;
-    background-color: aquamarine;
+* {
+    box-sizing: border-box;
 }
-#h1 {
-    color: aquamarine;
+
+header,
+nav,
+section,
+aside,
+footer {
+    display:block;
+    margin: 10px;
+
+}
+body {
+    width: 100%;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: grey;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: auto;
+    width: 960px;
+
+} 
+header {
+    padding: 20px;
+    background-color: white;
+    text-align: center;
+    color: grey;
+}
+nav {
+    padding: 20px;
+    background-color: white;
+    text-align: center;
+    color: grey;
+}
+section {
+    float: left;
+    padding: 10px;
+    text-align: center;
+    background-color: white;
+    overflow: auto;
+    height: 250px;
+    display: block;
+    width: 60%;
+    color: grey;
+   
+}
+article {
+  background-color: grey;
+  height: 200px;
+  padding: 10px;
+  margin-top: 7px;
+  color:white;
+}
+aside {
+    float: right;
+    text-align: center;
+    background-color: white; 
+    height: 250px;
+    width: 35%;
+    color: grey;
+    padding: 10px;
+    }
+
+p {
+    padding: 20px;
+    background-color: white;
+    color: grey;
+
+}
+.heading {
+    padding: 20px;
+    background-color:white;
+    color: grey;
+
+}
+
+footer {
+    padding: 20px;
+    background-color: white;
+    text-align: center;
+    color: grey;
+    display: block;
+}
+.clear {
+    clear: both;
 }
